<h5>1.09 RC1</h5>  [WORK IN PROGRESS - NOT RELEASED]  Dev: XOOPS 2.5.10, PHP 7.3.1
<hr>
 - moved to RC1 (goffy)
 - added image handling to image management - edit/delete/download (goffy/mamba)
 - improved redirection after image handling - edit/delete (goffy/mamba)
 - added new preference displayButtonText (goffy/mamba)
 - aligned buttons in maintenance left (goffy/mamba) 
 
<h5>1.09 Beta1</h5>  [WORK IN PROGRESS - NOT RELEASED]  Dev: XOOPS 2.5.9, PHP 7.3.1
<hr>
 - added preferences for default album image size (goffy)
 - added image manipulation for album images (goffy)
	- select existing image
	- create image grid
	- crop image with cropper.js
	- upload image
 - adapting block albums (goffy)
 - adapting block images (goffy)
 - added different kind of blocks (default, recent, random) (goffy)
 - code cleaning (mamba)
 - added namespaces (mamba)
 - added notification (mamba)
 - added feedback (goffy/mamba)
 - moved Resizer to /class (mamba)
 - moved FineImUploader to /class/Common (mamba)
 - update changelog (mamba)
 - added comments (mamba)
 - updated search function (goffy)
 - updated notification (goffy)
 - updated comments (goffy)
 - updated testtables (goffy)
 - added possibility to resize images for specific albums in maintenance (goffy)
 - changed preview of images for edit album image to thumb (goffy)

<h5>1.08</h5> [2018/12/28 19:55:00]
<hr>
 - added preference "show_copyright" (goffy)
 - added preselection for group perms when creating album (goffy)
 - rebuilt maintenance (goffy)
 - added exif read (goffy/altermann)


<h5>1.07</h5> [2018/12/20 14:00:00]
<hr>
 - added autoplay/autoopen to viewerjs (goffy)
 - added show single image (goffy/altermann)
 - added download script (goffy)
 - added status message to fine uploader (goffy/altermann)
 - added pagenav to imagelist tpl (goffy)
 - updated permission system (goffy)
 - added image sorting (goffy)
 - added language support for lc_lightbox_lite (goffy)

 
<h5>1.0</h5> [2018-03-19 10:04:56]
<hr>