@@ -1,0 +1,85 @@
+-
+    gperm_groupid: '3'
+    gperm_itemid: '1'
+    gperm_modid: '10'
+    gperm_name: wggallery_dlimage_medium
+-
+    gperm_groupid: '3'
+    gperm_itemid: '2'
+    gperm_modid: '10'
+    gperm_name: wggallery_dlimage_medium
+-
+    gperm_groupid: '2'
+    gperm_itemid: '1'
+    gperm_modid: '10'
+    gperm_name: wggallery_dlimage_medium
+-
+    gperm_groupid: '2'
+    gperm_itemid: '2'
+    gperm_modid: '10'
+    gperm_name: wggallery_dlimage_medium
+-
+    gperm_groupid: '1'
+    gperm_itemid: '1'
+    gperm_modid: '10'
+    gperm_name: wggallery_dlimage_medium
+-
+    gperm_groupid: '1'
+    gperm_itemid: '2'
+    gperm_modid: '10'
+    gperm_name: wggallery_dlimage_medium
+-
+    gperm_groupid: '1'
+    gperm_itemid: '1'
+    gperm_modid: '10'
+    gperm_name: wggallery_dlimage_large
+-
+    gperm_groupid: '1'
+    gperm_itemid: '2'
+    gperm_modid: '10'
+    gperm_name: wggallery_dlimage_large
+-
+    gperm_groupid: '3'
+    gperm_itemid: '1'
+    gperm_modid: '10'
+    gperm_name: wggallery_view
+-
+    gperm_groupid: '1'
+    gperm_itemid: '16'
+    gperm_modid: '10'
+    gperm_name: wggallery_global
+-
+    gperm_groupid: '1'
+    gperm_itemid: '8'
+    gperm_modid: '10'
+    gperm_name: wggallery_global
+-
+    gperm_groupid: '1'
+    gperm_itemid: '4'
+    gperm_modid: '10'
+    gperm_name: wggallery_global
+-
+    gperm_groupid: '3'
+    gperm_itemid: '2'
+    gperm_modid: '10'
+    gperm_name: wggallery_view
+-
+    gperm_groupid: '2'
+    gperm_itemid: '1'
+    gperm_modid: '10'
+    gperm_name: wggallery_view
+-
+    gperm_groupid: '2'
+    gperm_itemid: '2'
+    gperm_modid: '10'
+    gperm_name: wggallery_view
+-
+    gperm_groupid: '1'
+    gperm_itemid: '1'
+    gperm_modid: '10'
+    gperm_name: wggallery_view
+-
+    gperm_groupid: '1'
+    gperm_itemid: '2'
+    gperm_modid: '10'
+    gperm_name: wggallery_view
